--- a/frameworks/Lab02ODELGADILLO/WebContent/index.html
+++ b/frameworks/Lab02ODELGADILLO/WebContent/index.html
@@ -5,11 +5,76 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LAB02ODELGADILLO</title>
+    <!-- CSS only -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 
 <body>
-    <button onclick="validarTexto()">aea</button>
+    <div class="container border my-5 p-4">
+        <h1>Registro de cliente</h1>
+        <hr>
+        <!-- NOMBRES Y APELLIDOS -->
+        <div class="container px-5 py-3">
+            <div class="row">
+                <div class="col-2">
+                    <label for="Nombres y apellidos">
+                        Nombres y <br>apellidos <strong class="h4 text-danger">*</strong></label>
+                </div>
+                <div class="col-10">
+                    <input class="form-control col-3" type="text">
+                    <small class="text-muted">Nombre</small>
+                    <input class="form-control col-6" type="text">
+                    <small class="text-muted">Primer apellido</small>
+                    <input class="form-control col-6" type="text">
+                    <small class="text-muted">Segundo apellido</small>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <!-- DIRECCION -->
+        <div class="container px-5 py-3">
+            <div class="row">
+                <div class="col-2">
+                    <label for="Nombres y apellidos">
+                        Dirección<strong class="h4 text-danger">*</strong></label>
+                </div>
+                <div class="col-10">
+                    <input class="form-control col-6" type="text">
+                    <small class="text-muted">Calle, número, piso, puerta</small>
+                    <div class="row">
+                        <div class="col-2">
+                            <select class="form-control col">
+                                <option selected></option>
+                                <option value="1">One</option>
+                                <option value="2">Two</option>
+                                <option value="3">Three</option>
+                            </select>
+                            <small class="text-muted">Provincia</small>
+                        </div>
+                        <div class="col-2"></div>
+                        <div class="col-4">
+                            <select class="form-control col">
+                                <option selected></option>
+                                <option value="1">One</option>
+                                <option value="2">Two</option>
+                                <option value="3">Three</option>
+                            </select>
+                            <small class="text-muted">Provincia</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+
+    <!-- <button onclick="validarTexto()">aea</button> -->
     <script src="./main.js"></script>
+    <!-- JS, Popper.js, and jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
 
 </html>
