--- a/frameworks/Lab02ODELGADILLO/WebContent/index.html
+++ b/frameworks/Lab02ODELGADILLO/WebContent/index.html
@@ -7,10 +7,12 @@
     <title>LAB02ODELGADILLO</title>
     <!-- CSS only -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
 </head>
 
 <body>
-    <div class="container border my-5 p-4">
+    <!-- <form class="form-horizontal" id="formValidate"> -->
+    <div class="container border  my-4 py-3">
         <h1>Registro de cliente</h1>
         <hr>
         <!-- NOMBRES Y APELLIDOS -->
@@ -21,12 +23,12 @@
                         Nombres y <br>apellidos <strong class="h4 text-danger">*</strong></label>
                 </div>
                 <div class="col-10">
-                    <input class="form-control col-3" type="text">
-                    <small class="text-muted">Nombre</small>
-                    <input class="form-control col-6" type="text">
-                    <small class="text-muted">Primer apellido</small>
-                    <input class="form-control col-6" type="text">
-                    <small class="text-muted">Segundo apellido</small>
+                    <input class="form-control col-4" id="nombre" type="text">
+                    <small class="text-muted" id="nombre-small">Nombre</small>
+                    <input class="form-control col-6 mt-3" id="apellido1" type="text">
+                    <small class="text-muted" id="apellido1-small">Primer apellido</small>
+                    <input class="form-control col-6 mt-3" id="apellido2" type="text">
+                    <small class="text-muted" id="apellido2-small">Segundo apellido</small>
                 </div>
             </div>
         </div>
@@ -39,40 +41,81 @@
                         Dirección<strong class="h4 text-danger">*</strong></label>
                 </div>
                 <div class="col-10">
-                    <input class="form-control col-6" type="text">
-                    <small class="text-muted">Calle, número, piso, puerta</small>
+                    <input class="form-control col-6" id="direccion" type="text">
+                    <small class="text-muted" id="direccion-small">Calle, número, piso, puerta</small>
                     <div class="row">
-                        <div class="col-2">
-                            <select class="form-control col">
+                        <div class="col-3">
+                            <select class="form-control col mt-3" id="provincia">
                                 <option selected></option>
-                                <option value="1">One</option>
-                                <option value="2">Two</option>
-                                <option value="3">Three</option>
+                                <option value="1">Lima</option>
                             </select>
-                            <small class="text-muted">Provincia</small>
+                            <small class="text-muted" id="provincia-small">Provincia</small>
                         </div>
-                        <div class="col-2"></div>
+                        <div class="col-1"></div>
                         <div class="col-4">
-                            <select class="form-control col">
+                            <select class="form-control col mt-3" id="departamento">
                                 <option selected></option>
-                                <option value="1">One</option>
-                                <option value="2">Two</option>
-                                <option value="3">Three</option>
+                                <option value="1">Lima</option>
                             </select>
-                            <small class="text-muted">Provincia</small>
+                            <small class="text-muted" id="departamento-small">Departamento</small>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <hr>
+        <!-- EMAIL -->
+        <div class="container px-5 py-3">
+            <div class="row">
+                <div class="col-2">
+                    <label for="Nombres y apellidos">
+                        Email<strong class="h4 text-danger">*</strong></label>
+                </div>
+                <div class="col-10">
+                    <input class="form-control col-6" id="email" type="email">
 
+                    <small class="text-muted" id="email-small"></small>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <!-- TELEFONO -->
+        <div class="container px-5 py-3">
+            <div class="row">
+                <div class="col-2">
+                    <label for="Nombres y apellidos">
+                        Teléfono<strong class="h4 text-danger">*</strong></label>
+                </div>
+                <div class="col-10">
+                    <div class="row">
+                        <div class="col">
+                            <input class="form-control col-6" id="fijo" type="text">
+                            <small class="text-muted" id="fijo-small">Fijo</small>
+                        </div>
+                        <div class="col">
+                            <input class="form-control col-6" id="movil" type="text">
+                            <small class="text-muted" id="movil-small">Móvil</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <!-- GUARDAR -->
+        <div class="container px-1 py-3">
+            <div class="row">
+                <div class="col-11"></div>
+                <div class="col-1">
+                    <input type="submit" value="Guardar" onclick="validar()">
+                </div>
+            </div>
+        </div>
 
     </div>
-
-    <!-- <button onclick="validarTexto()">aea</button> -->
+    <!-- </form> -->
     <script src="./main.js"></script>
-    <!-- JS, Popper.js, and jQuery -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
